# snap2

./: Cargo.toml  README.md  app.icns
.github/workflows/: release-macos.yml
github/workflows/: release-macos.yml
src/: app_launcher.rs  dock_reader.rs  key_grabber.rs  main.rs
