[package]
name = "snap2"
version = "0.1.0"
edition = "2024"
description = "A short description of your crate"
license = "MIT"
repository = "https://github.com/jul-good/snap2"
readme = "README.md"
keywords = ["macos", "tool"]

[package.metadata.packager]
product_name = "snap2"
before-packaging-command = "cargo build --release"
formats = ["app"]
icons = ["app.icns"]
macos = { background_app = true }

[dependencies]
anyhow = "1.0.98"
rdev = { version = "0.5.3", features = ["unstable_grab"] }
plist = "1.7.1"
serde = "1.0.219"
serde_derive = "1.0.219"